docs/v0.9.0/_sources/gallery/tutorials/workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/tutorials/workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_tutorials_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_tutorials_workflow.py:


Workflow
========

This tutorial demonstrates how to simulate a flow cytometry experiment using the FlowCyPy library.
The simulation involves configuring a flow setup, defining a single population of particles, and
analyzing scattering signals from two detectors to produce a 2D density plot of scattering intensities.

Overview:
---------
1. Configure the flow cell and particle population.
2. Define the laser source and detector parameters.
3. Simulate the flow cytometry experiment.
4. Analyze the generated signals and visualize results.

.. GENERATED FROM PYTHON SOURCE LINES 19-23

Step 0: Import Necessary Libraries
-----------------------------------
Here, we import the necessary libraries and units for the simulation. The units module helps us
define physical quantities like meters, seconds, and watts in a concise and consistent manner.

.. GENERATED FROM PYTHON SOURCE LINES 23-28

.. code-block:: Python


    import numpy as np
    from FlowCyPy import units









.. GENERATED FROM PYTHON SOURCE LINES 29-33

Step 1: Configure Noise Settings
---------------------------------
Noise settings are configured to simulate real-world imperfections. In this example, we include noise
globally but exclude specific types, such as shot noise and thermal noise.

.. GENERATED FROM PYTHON SOURCE LINES 33-44

.. code-block:: Python


    from FlowCyPy import NoiseSetting

    NoiseSetting.include_noises = True
    NoiseSetting.include_shot_noise = False
    NoiseSetting.include_thermal_noise = False
    NoiseSetting.include_dark_current_noise = False

    np.random.seed(3)  # Ensure reproducibility









.. GENERATED FROM PYTHON SOURCE LINES 45-49

Step 2: Configure the Laser Source
----------------------------------
The laser source generates light that interacts with the particles. Its parameters, like numerical
aperture and wavelength, affect how light scatters, governed by Mie theory.

.. GENERATED FROM PYTHON SOURCE LINES 49-59

.. code-block:: Python


    from FlowCyPy import GaussianBeam

    source = GaussianBeam(
        numerical_aperture=0.3 * units.AU,           # Numerical aperture
        wavelength=200 * units.nanometer,           # Wavelength
        optical_power=20 * units.milliwatt          # Optical power
    )









.. GENERATED FROM PYTHON SOURCE LINES 60-67

Step 3: Set Up the Flow Cell
----------------------------
The flow cell models the movement of particles in the cytometer. For example, the volume of fluid
passing through the cross-sectional area is calculated as:

.. math::
    \text{Flow Volume} = \text{Flow Speed} \times \text{Flow Area} \times \text{Run Time}

.. GENERATED FROM PYTHON SOURCE LINES 67-77

.. code-block:: Python


    from FlowCyPy import FlowCell

    flow_cell = FlowCell(
        source=source,
        volume_flow=0.3 * units.microliter / units.second,  # Flow volume
        flow_area=(10 * units.micrometer) ** 2,       # Cross-sectional area
    )









.. GENERATED FROM PYTHON SOURCE LINES 78-85

Step 4: Define ScattererCollection and Population
-------------------------------------------------
The scatterer represents particles in the flow. The concentration of particles in the flow cell is
given by:

.. math::
    \text{Concentration} = \frac{\text{Number of Particles}}{\text{Volume of Flow}}

.. GENERATED FROM PYTHON SOURCE LINES 85-108

.. code-block:: Python


    from FlowCyPy import ScattererCollection
    from FlowCyPy.population import Exosome, Population, distribution

    scatterer_collection = ScattererCollection(medium_refractive_index=1.33 * units.RIU)

    exosome = Exosome(particle_count=5e9 * units.particle / units.milliliter)

    custom_population = Population(
        name='Pop 0',
        particle_count=5e9 * units.particle / units.milliliter,
        size=distribution.RosinRammler(characteristic_size=150 * units.nanometer, spread=30),
        refractive_index=distribution.Normal(mean=1.44 * units.RIU, std_dev=0.002 * units.RIU)
    )

    # Add an Exosome population
    scatterer_collection.add_population(exosome, custom_population)

    scatterer_collection.dilute(factor=4)

    # Initialize the scatterer with the flow cell
    scatterer_collection.plot()  # Visualize the particle population




.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_001.png
   :alt: workflow
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 109-113

Step 5: Define Detectors
------------------------
Detectors measure light intensity. Parameters like responsitivity define the conversion of optical
power to electronic signals, and saturation level represents the maximum signal they can handle.

.. GENERATED FROM PYTHON SOURCE LINES 113-141

.. code-block:: Python


    from FlowCyPy.detector import Detector
    from FlowCyPy.signal_digitizer import SignalDigitizer

    signal_digitizer = SignalDigitizer(
        bit_depth='14bit',
        saturation_levels='auto',
        sampling_freq=60 * units.megahertz,
    )

    detector_0 = Detector(
        name='forward',
        phi_angle=0 * units.degree,                  # Forward scatter angle
        numerical_aperture=1.2 * units.AU,
        responsitivity=1 * units.ampere / units.watt,
        resistance=50 * units.ohm,
        temperature=300 * units.kelvin
    )

    detector_1 = Detector(
        name='side',
        phi_angle=90 * units.degree,                 # Side scatter angle
        numerical_aperture=1.2 * units.AU,
        responsitivity=1 * units.ampere / units.watt,
        resistance=50 * units.ohm,
        temperature=300 * units.kelvin,
    )








.. GENERATED FROM PYTHON SOURCE LINES 142-149

Step 6: Simulate Flow Cytometry Experiment
------------------------------------------
The FlowCytometer combines all components to simulate scattering. The interaction between light
and particles follows Mie theory:

.. math::
    \sigma_s = \frac{2 \pi}{k} \sum_{n=1}^\infty (2n + 1) (\lvert a_n \rvert^2 + \lvert b_n \rvert^2)

.. GENERATED FROM PYTHON SOURCE LINES 149-167

.. code-block:: Python

    from FlowCyPy import FlowCytometer

    cytometer = FlowCytometer(
        scatterer_collection=scatterer_collection,
        signal_digitizer=signal_digitizer,
        detectors=[detector_0, detector_1],
        flow_cell=flow_cell,
        background_power=0.001 * units.milliwatt
    )

    # Run the flow cytometry simulation
    acquisition = cytometer.get_acquisition(run_time=0.2 * units.millisecond)

    _ = acquisition.scatterer.plot(
        x='side',
        y='forward'
    )




.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_002.png
   :alt: Scatterer Sampling Distribution
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 168-169

Visualize the scatter signals from both detectors

.. GENERATED FROM PYTHON SOURCE LINES 169-171

.. code-block:: Python

    acquisition.analog.plot()




.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_003.png
   :alt: workflow
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 172-176

Step 7: Analyze Detected Signals
--------------------------------
The Peak algorithm detects peaks in signals by analyzing local maxima within a defined
window size and threshold.

.. GENERATED FROM PYTHON SOURCE LINES 176-187

.. code-block:: Python

    triggered_acquisition = acquisition.run_triggering(
        threshold=0.2 * units.millivolt,
        trigger_detector_name='forward',
        max_triggers=35,
        pre_buffer=64,
        post_buffer=64
    )

    triggered_acquisition.analog.plot()





.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_004.png
   :alt: workflow
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 188-189

Getting and plotting the extracted peaks.

.. GENERATED FROM PYTHON SOURCE LINES 189-201

.. code-block:: Python

    from FlowCyPy import peak_locator
    # peak_locator = peak_locator.ScipyPeakLocator(height=10 * units.bit_bins, padding_value=-1)
    peak_algorithm = peak_locator.BasicPeakLocator()

    peaks = triggered_acquisition.detect_peaks(peak_algorithm)

    peaks.plot(
        feature='Height',
        x_detector='side',
        y_detector='forward'
    )




.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_005.png
   :alt: Peaks properties
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_005.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <seaborn.axisgrid.JointGrid object at 0x7f20eddfd110>



.. GENERATED FROM PYTHON SOURCE LINES 202-203

Step 8: Classifying the collected dataset

.. GENERATED FROM PYTHON SOURCE LINES 203-217

.. code-block:: Python

    from FlowCyPy.classifier import KmeansClassifier

    classifier = KmeansClassifier(number_of_cluster=2)
    print(peaks)
    data = classifier.run(
        dataframe=peaks.unstack('Detector'),
        features=['Height'],
        detectors=['side', 'forward']
    )

    _ = data.plot(
        feature='Height',
        x_detector='side',
        y_detector='forward'
    )


.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_006.png
   :alt: Event classification
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_006.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

                      Peak_Index  Height                    Time
    Detector Segment                                            
    forward  0               8.0   11019  3.8336528044003674e-07
             1             103.0   11049     4.7670639219935e-06
             2              68.0     553    6.33386115509626e-06
             3              70.0   11534   1.286773897824819e-05
             4              70.0   12617  1.5917993166097177e-05
    ...                      ...     ...                     ...
    side     30             95.0   11157  0.00011560963413617803
             31             25.0   11677  0.00011704308692391034
             32             70.0    5894  0.00012129344112009335
             33             77.0   10881  0.00012411034252854408
             34             19.0   16383   0.0001258438203183599

    [70 rows x 3 columns]
    /opt/hostedtoolcache/Python/3.11.11/x64/lib/python3.11/site-packages/FlowCyPy/dataframe_subclass.py:185: PerformanceWarning: indexing past lexsort depth may impact performance.
      x=temp[(feature, x_detector)].values.squeeze(),
    /opt/hostedtoolcache/Python/3.11.11/x64/lib/python3.11/site-packages/FlowCyPy/dataframe_subclass.py:186: PerformanceWarning: indexing past lexsort depth may impact performance.
      y=temp[(feature, y_detector)].values.squeeze(),





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 5.837 seconds)


.. _sphx_glr_download_gallery_tutorials_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: workflow.ipynb <workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: workflow.py <workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: workflow.zip <workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
